Patch version differentiation fix

--- a/H1EmuLauncher/App.config
+++ b/H1EmuLauncher/App.config
@@ -19,10 +19,13 @@
             <setting name="patchNotes" serializeAs="String">
                 <value />
             </setting>
-            <setting name="currentPatchVersion" serializeAs="String">
+            <setting name="sessionIdKey" serializeAs="String">
                 <value />
             </setting>
-            <setting name="sessionIdKey" serializeAs="String">
+            <setting name="currentPatchVersion2015" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="currentPatchVersion2016" serializeAs="String">
                 <value />
             </setting>
         </H1EmuLauncher.Properties.Settings>
