Account key check
- Added logic to check if account is valid on H1Emu database (not in use yet)
- Added digital certificate signing
- Will add zip file portable release of launcher
- Code cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ obj/
 .vs/
 H1EmuLauncherSetup/Debug
 H1EmuLauncherSetup/Release
+H1EmuLauncherSetup/H1EmuLauncherCertificate.crt
+H1EmuLauncherSetup/H1EmuLauncherCertificate.pfx
+H1EmuLauncherSetup/PrivateKey.key
