--- a/H1EmuLauncher/App.config
+++ b/H1EmuLauncher/App.config
@@ -28,6 +28,9 @@
             <setting name="currentPatchVersion2016" serializeAs="String">
                 <value />
             </setting>
+            <setting name="currentPatchVersionKotK" serializeAs="String">
+                <value />
+            </setting>
         </H1EmuLauncher.Properties.Settings>
     </userSettings>
 </configuration>
