--- a/H1EmuLauncher/Properties/Settings.settings
+++ b/H1EmuLauncher/Properties/Settings.settings
@@ -32,5 +32,11 @@
     <Setting Name="currentPatchVersion2016" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="currentPatchVersionKotK" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="imageCarouselVisibility" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
