--- a/H1EmuLauncher/H1EmuLauncher.csproj
+++ b/H1EmuLauncher/H1EmuLauncher.csproj
@@ -2,16 +2,16 @@
 
   <PropertyGroup>
 	  <OutputType>WinExe</OutputType>
-	  <TargetFramework>net6.0-windows</TargetFramework>
+	  <TargetFramework>net6.0-windows10.0.17763.0</TargetFramework>
 	  <RootNamespace>H1EmuLauncher</RootNamespace>
 	  <UseWPF>true</UseWPF>
 	  <UseWindowsForms>true</UseWindowsForms>
 	  <ApplicationIcon>Icon.ico</ApplicationIcon>
-	  <AssemblyVersion>2.8.0</AssemblyVersion>
-	  <FileVersion>2.8.0</FileVersion>
+	  <AssemblyVersion>2.8.1</AssemblyVersion>
+	  <FileVersion>2.8.1</FileVersion>
 	  <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
 	  <Authors>H1Emu</Authors>
-	  <Version>2.8.0</Version>
+	  <Version>2.8.1</Version>
 	  <AssemblyName>H1EmuLauncher</AssemblyName>
 	  <SignAssembly>false</SignAssembly>
 	  <Copyright>© H1Emu</Copyright>
@@ -37,8 +37,6 @@
     <None Remove="Resources\5.jpg" />
     <None Remove="Resources\6.jpg" />
     <None Remove="Resources\AccountKey.png" />
-    <None Remove="Resources\AccountKey_Hover.png" />
-    <None Remove="Resources\AccountKey_Pressed.png" />
     <None Remove="Resources\Arrow_Hover.png" />
     <None Remove="Resources\Arrow_Pressed.png" />
     <None Remove="Resources\Assets_256.pack" />
@@ -54,13 +52,12 @@
     <None Remove="Resources\Discord_Pressed.png" />
     <None Remove="Resources\DisplayImage.png" />
     <None Remove="Resources\Exit.png" />
-    <None Remove="Resources\Exit_Hover.png" />
-    <None Remove="Resources\Exit_Pressed.png" />
     <None Remove="Resources\Folder.png" />
     <None Remove="Resources\Folder_Hover.png" />
     <None Remove="Resources\Folder_Pressed.png" />
     <None Remove="Resources\Game-Patch-2015.zip" />
     <None Remove="Resources\Game-Patch-2016.zip" />
+    <None Remove="Resources\Game-Patch-KotK.zip" />
     <None Remove="Resources\Grain.png" />
     <None Remove="Resources\H1EmuIcon.png" />
     <None Remove="Resources\H1EmuLogo.png" />
@@ -71,6 +68,7 @@
     <None Remove="Resources\Language.png" />
     <None Remove="Resources\Loading.png" />
     <None Remove="Resources\Minimise.png" />
+    <None Remove="Resources\MinimiseToSystemTray.png" />
     <None Remove="Resources\NextButton.png" />
     <None Remove="Resources\NextButton_Hover.png" />
     <None Remove="Resources\NextButton_Pressed.png" />
@@ -139,6 +137,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
     <PackageReference Include="SteamKit2" Version="2.4.1" />
   </ItemGroup>
 
@@ -203,12 +202,6 @@
     <Resource Include="Resources\AccountKey.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Resources\AccountKey_Hover.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\AccountKey_Pressed.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
     <Resource Include="Resources\Assets_256.pack">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
@@ -245,12 +238,6 @@
     <Resource Include="Resources\Exit.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Resources\Exit_Hover.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\Exit_Pressed.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
     <Resource Include="Resources\Folder.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
@@ -264,6 +251,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Game-Patch-2016.zip">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Game-Patch-KotK.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Grain.png">
@@ -294,6 +284,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Minimise.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\MinimiseToSystemTray.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\NextButton.png">
