--- a/H1EmuLauncher/App.config
+++ b/H1EmuLauncher/App.config
@@ -31,6 +31,12 @@
             <setting name="currentPatchVersionKotK" serializeAs="String">
                 <value />
             </setting>
+            <setting name="imageCarouselVisibility" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="autoMinimise" serializeAs="String">
+                <value>True</value>
+            </setting>
         </H1EmuLauncher.Properties.Settings>
     </userSettings>
 </configuration>
