--- a/H1EmuLauncher/Properties/Settings.settings
+++ b/H1EmuLauncher/Properties/Settings.settings
@@ -36,7 +36,10 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="imageCarouselVisibility" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="autoMinimise" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
