--- a/H1EmuLauncher/H1EmuLauncher.csproj
+++ b/H1EmuLauncher/H1EmuLauncher.csproj
@@ -7,11 +7,11 @@
 	  <UseWPF>true</UseWPF>
 	  <UseWindowsForms>true</UseWindowsForms>
 	  <ApplicationIcon>Icon.ico</ApplicationIcon>
-	  <AssemblyVersion>2.8.2</AssemblyVersion>
-	  <FileVersion>2.8.2</FileVersion>
+	  <AssemblyVersion>2.8.3</AssemblyVersion>
+	  <FileVersion>2.8.3</FileVersion>
 	  <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
 	  <Authors>H1Emu</Authors>
-	  <Version>2.8.2</Version>
+	  <Version>2.8.3</Version>
 	  <AssemblyName>H1EmuLauncher</AssemblyName>
 	  <SignAssembly>false</SignAssembly>
 	  <Copyright>© H1Emu</Copyright>
@@ -90,37 +90,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Page Remove="Language\StringResources.bg-BG.xaml" />
-    <Page Remove="Language\StringResources.de-DE.xaml" />
-    <Page Remove="Language\StringResources.en.xaml" />
-    <Page Remove="Language\StringResources.es-ES.xaml" />
-    <Page Remove="Language\StringResources.fr.xaml" />
-    <Page Remove="Language\StringResources.hr.xaml" />
-    <Page Remove="Language\StringResources.nl-NL.xaml" />
-    <Page Remove="Language\StringResources.pl-PL.xaml" />
-    <Page Remove="Language\StringResources.pt-PT.xaml" />
-    <Page Remove="Language\StringResources.ru-RU.xaml" />
-    <Page Remove="Language\StringResources.tr-TR.xaml" />
-    <Page Remove="Language\StringResources.zh-cn.xaml" />
-    <Page Remove="Resources\JIGGERBISH.xaml" />
-    <Page Remove="Resources\StringResources.bg-BG.xaml" />
-    <Page Remove="Resources\StringResources.de-DE.xaml" />
-    <Page Remove="Resources\StringResources.en-EN.xaml" />
-    <Page Remove="Resources\StringResources.es-ES.xaml" />
-    <Page Remove="Resources\StringResources.fr-FR.xaml" />
-    <Page Remove="Resources\StringResources.hr-HR.xaml" />
-    <Page Remove="Resources\StringResources.hr.xaml" />
-    <Page Remove="Resources\StringResources.nl-NL.xaml" />
-    <Page Remove="Resources\StringResources.pl-PL.xaml" />
-    <Page Remove="Resources\StringResources.pt-PT.xaml" />
-    <Page Remove="Resources\StringResources.ru-RU.xaml" />
-    <Page Remove="Resources\StringResources.se-SE.xaml" />
-    <Page Remove="Resources\StringResources.tr-TR.xaml" />
-    <Page Remove="Resources\StringResources.xaml" />
-    <Page Remove="Resources\StringResources.zh-cn.xaml" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
     <Resource Include="Language\StringResources.en-EN.xaml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -169,7 +138,7 @@
     <Resource Include="Language\StringResources.tr-TR.xaml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Language\StringResources.zh-cn.xaml">
+    <Resource Include="Language\StringResources.zh-CN.xaml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\1.jpg">
