--- a/H1EmuLauncher/App.config
+++ b/H1EmuLauncher/App.config
@@ -34,6 +34,9 @@
             <setting name="autoMinimise" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="gameVersionString" serializeAs="String">
+                <value />
+            </setting>
         </H1EmuLauncher.Properties.Settings>
     </userSettings>
 </configuration>
